turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:20: error: type mismatch;
 found   : (Unit, Unit)
 required: Array[Array[Array[Int]]]
  rule = ((),())
         ^Turmite:71: error: ambiguous reference to overloaded definition,
both method init in class Turmite of type ()Unit
and  method init in class Turmite of type ()Unit
match argument types ()
		init();
                ^Turmite:51: error: method init is defined twice
  conflicting symbols both originated in file 'plm.runtime4.Turmite'
def init() {
    ^